# ragkit_desktop

./: .gitignore  README.md  RELEASE.md  RELEASE_LOCAL.md  pyproject.toml  pytest_output.txt  ragkit-backend.spec  test_import.py  test_results.txt
.claude/: settings.local.json
.github/workflows/: desktop.yml
desktop/: index.html  lint_output.txt  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.chatpage.test.tsx  App.tsx  i18n.ts  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/nsis/: installer-hooks.nsh
desktop/src-tauri/src/: backend.rs  commands.rs  main.rs
ragkit/: setup_nltk.py
ragkit/agents/: __init__.py  memory.py  orchestrator.py  query_analyzer.py  query_rewriter.py
ragkit/chunking/: __init__.py  engine.py  tokenizer.py
ragkit/config/: agents_schema.py  chunking_schema.py  config_export.py  embedding_schema.py  ingestion_schema.py  llm_schema.py  manager.py  monitoring_schema.py  rerank_schema.py  retrieval_schema.py  security_schema.py  vector_store_schema.py
ragkit/connectors/: __init__.py  base.py  confluence.py  credentials.py  dropbox.py  email_imap.py  git_repo.py  google_drive.py  local_directory.py  notion.py  onedrive.py  registry.py  rest_api.py  rss_feed.py  s3_bucket.py  sql_database.py  web_url.py
ragkit/desktop/: agents_service.py  analysis_progress.py  conversation_db.py  documents.py  ingestion_runtime.py  llm_service.py  main.py  migration.py  models.py  monitoring_service.py  (+4 more)
revues/: diagnostic-conversations-2026-03-08.md  plan-amelioration-2026-03-06.md  revue-complete-2026-03-06.md  revue_globale.md
specifications/: refonte-conversations.md
spécifications/: SPEC-LOADING-INDICATOR.md  ameliorations-ui-ux.md  metadata.md  parametres_rag_exhaustif.md  ragkit-roadmap-incremental.md  refonte-conversations.md  revue-erreurs-analyse-v1.1.2.md  revue-globale-code.md  revue-globale-etape-1.md  spec-auto-update.md  spec-latency-control.md  specs-cohere-embedding.md  specs-etape-0.md  specs-etape-1-ameliorations.md  specs-etape-1-diff.md  specs-etape-1.md  specs-etape-10.md  specs-etape-11.md  specs-etape-12.md  specs-etape-2.md  specs-etape-3.md  specs-etape-4.md  specs-etape-5.md  specs-etape-6.md  specs-etape-7.md  specs-etape-8.md  specs-etape-9.md  specs-initiales-projet.md  specs-sources-multi-types.md
(+239 files in other folders)
