[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragkit"
version = "1.1.1"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "langdetect>=1.0",
    "pypdf>=3.0",
    "python-docx>=0.8",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
desktop = [
    "pyinstaller>=6.0",
]

[tool.setuptools.packages.find]
include = ["ragkit*"]
exclude = ["desktop*", "spécifications*", "tests*"]
